--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,200 @@
-body {
+/* Configurações globais*/
+* {
     margin: 0;
-    border: 0;
     padding:0;
-    background: #fafafa;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 14px;
 }
 
+body {
+    background: #fafafa;
+    margin: 0 auto;
+    width: 900px;
+}
+.wraper {
+    display: block;
+    background: #fafafa;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width:  900px;
+    height: 800px;
+}
+
+/*configuração da caixa de conteúdo*/
 .main {
+    display: flex;
+    flex-direction: row;
     background: #fafafa;
+    justify-content: center;
+    margin-top: 20px;
+    padding:0;
 }
 
-.box_img {
+/*Aplicação de estilo caixa a esquerda - imagem do smartphone*/
+.left-wd {
+    background: #fafafa;
+    width:  350px;
+    height: 650px;
+    margin-right: 30px;
+}
+    #img-smart {
+        width:350px;
+        height:650px;
+    }
+
+/*Aplicação de estilo caixa a esquerda - logo formulários e botões*/
+.right-wd {
+    display:block;
+    background: #fafafa;
+    width:  340px;
+    height: 650px;
+}
+
+/*Caixa interna estilo: Logo, input-box e submit button*/
+.right-wd-main {
+    display:block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 350px;
+    border: 1px solid #cacaca;
     background: #fff;
-    width: auto;
-    height:auto;
-    flex:1;
+    border-radius: 1%;
 }
-
-.box_form {
-    width: 350px;
-    height: 379px;
-    margin: 5px 0 0 0;
-    padding: 10px;
-    flex: 2; 
+    #img-clone {
+        height: 70px;
+        width: 220px;
+        margin:20px;
+    }
+form {
+    height: auto;
+    width: 100%;   
 }
-
-.logo {
+    .input-box-login {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .input-box-pwd {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+        input {
+            padding: 5px;
+            width: 240px;
+            height: 25px; 
+            border-radius: 2%;
+            border: 1px solid #cacaca ;
+            font-size: 11px;
+            background: #fafafa;
+        }     
+    button {
+        padding: 5px;
+        width: 250px;
+        height: 30px;
+        border-radius: 2%;
+        border: 1px;
+        font-size: 12px;
+        background: #75a6cf; 
+        color: #fff
+    }
+.or-or {
+    margin-top: 20px;
+    color:rgb(67, 69, 71)
+}
+.fb-in {
     margin: 10px;
-    size: 50%;
+    color: #3d40e9
+}
+.pwd-fgt {
+    margin-top: 15px;
+    font-size: 11px;
+}
+
+/* aplicação de estilo dos formulários input box, login, senha, esqueceu a senha, submit*/
+.cadastro {
+    display: flex;
+    max-height: 65px;
+    margin-top: 10px;
+    border: 1px solid #cacaca;
+    background: #fff;
+    padding: 20px;
+    justify-content: center;
+    border-radius: 1%;    
+}
+.plink {
+    vertical-align: middle;
+    color: #cacaca
+}
+.alink {
+    color: rgb(40, 128, 230);
+}
+
+/* Estilo dos botões de download do aplicativo nas lojas apple e play store*/
+.get-app {
+    display:block;
+    justify-content: center;
+    background: #fafafa;
+    padding: 20px;
+}
+.app-str {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.btn {
+    width: 132px;
+    height: 42px;
+    margin: 5px;
+}
+
+.txt-app {
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+/*Declaração dos elementos de rodapé*/
+footer {
+    display:block;
+    margin-top:50px;
+    background: #fafafa;
+    text-align: center;
+}
+
+select {
+    font-size: 10px;
+    border: none;
+    background: #fafafa;
+    color: #737679;
+}
+
+.ft-sl {
+    display: block;
+}
+.rdp {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.about {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.ctn-about {
+    margin: 10px;
+    text-decoration: none;
+}
+.lang {
+    margin: 10px;
+}
+.cpy {
+    margin: 10px;
+    color: #737679;
+    font-family: sans-serif;
+}
+.at {
+    font-size: 11px;
+    color: #737679; 
 }
